tweak: overall fonts should now have a weight: 300 property for slicker text look; fixed spacing errors in the css property

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@ body {
   color: #fff;
   background-color: #000;
   letter-spacing: 1px;
+  font-weight: 300;
 }
 
 .aboutImage {
